updated starting html

--- a/01-project-setup/index.html
+++ b/01-project-setup/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <main>
-    <h1><span>Books hard to follow? YouTube letting you down?</span> Learn Chess the right way.</h1>
+    <h1>Books hard to follow? YouTube letting you down? Learn Chess the right way.</h1>
     <img src="images/chess-board.jpg" alt="A chess board with gold and silver peices">
     <p>Chess shouldn't feel like memorizing endless opening variations or sifting through amateur videos
       with confusing
