--- a/01-project-setup/instructor.html
+++ b/01-project-setup/instructor.html
@@ -9,7 +9,7 @@
 
 <body>
   <main>
-    <h1><span>Meet Your Instructor</span>Grandmaster Elena Petrov</h1>
+    <h1>Meet Your Instructor Grandmaster Elena Petrov</h1>
     <img src="images/elena.jpg" alt="Elena Petrov smiling at the camera while sitting front of a chess board">
     <p><strong>Elena has been teaching chess for over 15 years and holds the International Grandmaster
         title</strong>.
